--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "private": "true",
   "dependencies": {
     "express": "3.1.1"
+  },
+  "devDependencies": {
+    "gulp": "~3.8.10"
+  },
+  "scripts": {
+	  "gulp": "gulp"
   }
 }
