--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "express": "3.1.1"
   },
   "devDependencies": {
-    "gulp": "~3.8.10"
+    "gulp": "~3.8.10",
+    "gulp-mocha": "~2.0.1",
+    "should": "~6.0.1"
   },
   "scripts": {
-	  "gulp": "gulp"
+    "gulp": "gulp"
   }
 }
